<resources>
    <string name="app_name">MyAppMovieTicketBooking</string>
    <string name="r_p_chi_u_cgv">Rạp chiếu CGV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trang_ch">Trang chủ</string>
    <string name="t_i_kho_n">Tài Khoản</string>
    <string name="th_ng_b_o">Thông báo</string>
    <string name="tin_t_c">Tin tức</string>
    <string name="l_ch_phim">Lịch Phim</string>
    <string name="start">START</string>
    <string name="title_movies">Title Movies</string>
    <string name="phim_ang_chi_u">Phim Đang Chiếu</string>
</resources>