<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.TrangChuFragment"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#F2FFE9">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="116dp"
        android:layout_height="125dp"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        android:src="@drawable/logo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvNameLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_p_chi_u_cgv"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imgMoviesTC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toEndOf="@+id/imgLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvPhimDangChieu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phim_ang_chi_u"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imgMoviesTC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="0.47"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imgMoviesTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:adjustViewBounds="true"
        android:src="@drawable/anh1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTitleMoviesTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:text="@string/title_movies"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMoviesTC"
        app:layout_constraintVertical_bias="0.118"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>